--- a/pages/classify/classify.wxml
+++ b/pages/classify/classify.wxml
@@ -5,33 +5,33 @@
     scroll-x="true" 
     scroll-into-view="wrapper-item-{{classifyId}}">
     <view 
-      class='horizontal-scroll' 
+      class='horizontal-scroll' hover-class="hover-item"
       wx:for="{{classifyData}}" 
       wx:key="index" 
       bindtap="handleclick"
       data-id="{{item.id}}"
       >
       <text>{{item.name}}</text>
-      <view class="content content-{{item.id}}">
-        <view class="product-list">
-          <!-- <view class="product-item">
-            <view class="product-image">
-              <image class="img" >src="{item.image_Url}"</image>
-            </view>
-            <view class="name"></view>
-          </view> -->
-          <view class="product-item" wx:for="{{productData}}"  wx:key="index" bindtap="handleSingle">
-            <view class="product-image">
-              <image class="img" src="{{item.image_Url}}"></image>
-            </view>
-            <view class="name">{{item.name}}</view>
-            <view class="price">$:
-              <view class="num">{{item.price_discount}}</view>
-            </view>
-          </view>
+    </view>
+  </scroll-view>
+  <view class="content content-{{item.id}}">
+    <view class="product-list">
+      <view class="product-item" 
+        wx:for="{{productData}}"  
+        wx:key="index" 
+        bindtap="handleSingle"
+        data-num="{{item.classify_id}}"
+        data-id="{{item.id}}"
+        hidden="{{see == false?false: true}}">
+        <view class="product-image">
+          <image class="img" src="{{item.image_Url}}"></image>
+        </view>
+        <view class="name">{{item.name}}</view>
+        <view class="price">$:
+          <view class="num">{{item.price_discount}}</view>
         </view>
       </view>
     </view>
-  </scroll-view>
+  </view>
 </view>
 
