--- a/pages/address/address.wxss
+++ b/pages/address/address.wxss
@@ -1,66 +1,62 @@
-.checkbox{
-  position: relative;
+.container{
+  /* display: block; */
+}
+.notic{
+  width: 702rpx;
+  padding: 16rpx 24rpx;
+  color: #f56723;
+  font-size: 24rpx;
+  line-height: 1.5;
+  background-color: #fff7cc;
+}
+.address-list{
+  flex: 1;
+  width: 100%;
+}
+.address-detail{
   display: flex;
-  padding: 14rpx 80rpx;
-  border-bottom: 2rpx solid #e7e7e7;
-}
-.box{
-  content: "\20";
-  width: 40rpx;
-  height: 40rpx;
-  position: absolute;
-  top: 50%;
-  left: 20rpx;
-  margin-top: -20rpx;
-}
-.userinfo{
-  
-}
-.info{
-  display: flex;
-  margin-top: 8rpx;
-  list-style: none;
-  font-size: 32rpx;
-  color:#333;
-}
-.usertel{
-  margin-left:10rpx;
-}
-.useraddress{
-  display: flex;
-}
-.default{
-  display: inline-block;
-  /* position: relative;
-  top: 10rpx; */
-  width: 60rpx;
-  height: 30rpx;
-  padding: 0 10rpx;
-  margin: 10rpx 10rpx 0 0;
-  vertical-align: middle;
-  line-height: 30rpx;
-  font-size: 20rpx;
-  color: #f2270c;
-  border: 2rpx solid #f2270c;
-}
-.address{
-  height: 84rpx;
-  font-size: 28rpx;
+  flex-direction: column;
+  flex-wrap: wrap;
+  font-size: 26rpx;
   color: #666;
-  word-break: break-all;
+  line-height: 1.4;
+  height: auto;
+  padding: 15rpx 30rpx;
+  box-sizing: border-box;
+  border-bottom: 2prx solid #fff;
 }
-.edit{
-  position: relative;
-  right: -40rpx;
-  top: 40rpx;
-  width: 80rpx;
-  height: 80rpx;
-  line-height: 80rpx;
-  color: #f2270c;
+.address-top {
+  display: flex;
+}
+.address-buttom{
+  display: flex;
+}
+.address-located{
+  color: #000;
+}
+.btn{
+  display: flex;
+  height: 100%;
+  width: 200rpx;
+}
+.del-btn{
+  padding: 0 20rpx;
   font-size: 28rpx;
-  z-index: auto;
+  color: #fff;
+  line-height: 100rpx;
+  background-color: #ee0a24;
+  border: 2rpx solid #ee0a24;
+}
+.edit-btn{
+  padding: 0 20rpx;
+  font-size: 28rpx;
+  color: #fff;
+  line-height: 100rpx;
+  background-color: #07c160;
+    border: 2rpx solid #07c160;
 }
 .create{
+  width: 90%;
   margin: 40rpx;
   font-size: 32rpx;
   height: 80rpx;
@@ -68,7 +64,7 @@
   border-radius: 40rpx;
   text-align: center;
   color: #666666;
-  border: 2px solid #ccc;
+  border: 2rpx solid #ccc;
   box-shadow: 0 6rpx 12rpx 0 rgba(0,0,0,.05);
   z-index: 1;
 
