--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,27 +1,42 @@
 <!--pages/cart/cart.js.wxml-->
 <view class="container">
-  <view class="cart-list">
-    <van-card
-      num="2"
-      tag="标签"
-      price="10.00"
-      desc="描述信息"
-      title="商品标题"
-      thumb="{{ imageURL }}"
-    >
-    <view slot="footer">
-      <van-button size="mini">按钮</van-button>
-      <van-button size="mini">按钮</van-button>
-    </view>
-    </van-card>
+  <view class="header">
+    <navigator class="banner" url="/pages/address/address">
+      <van-icon name="location-o" size="40rpx" custom-style="margin:0 0 0 100rpx;"/>
+      <view class="address-text">收货地址</view>
+    </navigator>
+  </view>
+  <view class="body" wx:if="{{!empty}}">
+    <van-checkbox-group value="{{ totalArr }}" bind:change="Change">
+      <view class="cart-list" wx:for="{{cartData}}" wx:key="index" >
+        <van-checkbox class="cart-choose"  checked-color="e93b3d" name="{{item.id}}"></van-checkbox>
+        <van-card 
+          class="cart-card"
+          num="{{item.goodsnumber}}"
+          tag="{{item.name}}"
+          price="{{item.price}}"
+          desc="{{item.descript}}"
+          title="商品描述"
+          thumb="{{item.image_url}}"
+        >
+        </van-card>
+      </view>
+    </van-checkbox-group>
+  </view>
+  <view class="bodyempty" wx:else>
+
   </view>
   <view class="cart-sub">
     <van-submit-bar
-      price="{{ 3050 }}"
+      price="{{ total }}"
       button-text="提交订单"
-      bind:submit="onClickButton"
+      bind:submit="handlesubmit"
       tip="{{ true }}"
-    >
+    > 
+      <view class="choose">
+        <van-checkbox value="{{all}}" bind:change="countAll" checked-color="e93b3d">全选</van-checkbox>
+      </view>
+      
     </van-submit-bar>
   </view>
 </view>
