--- a/pages/classify/classify.wxss
+++ b/pages/classify/classify.wxss
@@ -8,10 +8,16 @@
   width: 160rpx;
   height: 80rpx;
   line-height: 80rpx;
-  background-color: green;
+  background: #e93b3d;
   margin-right: 40rpx;
   display: inline-block;
   text-align: center;
+  border-right: 4rpx solid #f8f8f8;
+  box-shadow: 8rpx 8rpx 4rpx #f8f8f8;
+
+}
+.hover-item{
+  background: #ccc;
 }
 .horizontal-scroll text {
   font-size: 28rpx;
@@ -36,12 +42,14 @@
 }
 .product-item{
   padding: 30rpx 30rpx 0;
-  width: 100%;
-  height: 450rpx;
+  width: 316rpx;
+
+  height: 420rpx;
   border-radius: 20rpx;
   background: #fff;
   border-right: 2rpx solid #f7f7f7;
 }
+
 .product-image{
   width: 314rpx;
   height: 314rpx;
