--- a/pages/goods/goods.wxss
+++ b/pages/goods/goods.wxss
@@ -8,6 +8,10 @@
   border-radius: 20rpx;
   background-color: #fff;
 }
+.swiper-item{
+  width: 750rpx;
+  height: 300rpx;
+}
 .price{
   color: #f2270c;
   margin-top: 24rpx;
@@ -18,6 +22,15 @@
 .price-num{
   display: inline-block;
   font-size: 60rpx;
+  text-decoration: line-through;
+}
+.price-nodiscount{
+  display: inline-block;
+  margin-left: 30rpx;
+}
+.price-no{
+  display: inline;
+  font-size: 32rpx;
 }
 .descript{
   padding: 24rpx 36rpx;
@@ -30,4 +43,164 @@
   margin-top: 20rpx;
   border-radius: 20rpx;
   background: #fff;
+}
+.banner-img{
+  width: 100%;
+  height: 600rpx;
+}
+.fixbar{
+  display: flex;
+  position: fixed;
+  background: #fff;
+  width: 100%;
+  bottom: 0;
+}
+.fix-cart{
+  
+}
+.icon{
+  padding: 20rpx;
+}
+.hover-icon{
+  background-color: #f7f7f7;
+  color: #f2140c;
+}
+.buy{
+  flex: 1;
+  padding: 0 18rpx;
+}
+.buy-button{
+  display: inline-block;
+  width: 246rpx;
+}
+.add-to-cart{
+  position: relative;
+  line-height: 76rpx;
+  height: 76rpx;
+  text-align: center;
+  color: #fff;
+  font-size: 26rpx;
+  border-radius: 42rpx;
+  background-image: linear-gradient(135deg,#f2140c,#f2270c 70%,#f24d0c);
+  margin: 12rpx 10rpx 0 0;
+  box-sizing: border-box;
+  padding: 0 20rpx;
+  cursor: pointer;
+}
+.buy-now{
+  position: relative;
+  line-height: 76rpx;
+  height: 76rpx;
+  text-align: center;
+  color: #fff;
+  font-size: 26rpx;
+  border-radius: 42rpx;
+  background-image: linear-gradient(135deg,#ffba0d,#ffc30d 69%,#ffcf0d);
+  margin: 12rpx 10rpx 0 0;
+  box-sizing: border-box;
+  padding: 0 20rpx;
+  cursor: pointer;
+}
+.skus-container{
+  height: 100%;
+  width: 100%;
+  padding-bottom: 20rpx;
+}
+.header{
+  position: relative;
+  display: flex;
+  height: 200rpx;
+  padding:  0 0 0 200rpx;
+}
+.skus-image{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 200rpx;
+  height: 200rpx;
+}
+.skus-img{
+  width: 200rpx;
+  height: 200rpx;
+}
+.skus-price{
+  display: inline-block;
+  margin-left: 40rpx;
+  padding-top: 80rpx;
+  font-size: 24rpx;
+  color: #f2270c;
+}
+.skus-num{
+  display: inline-block;
+  font-size: 48rpx;
+}
+.skus-text{
+  margin-top: 20rpx;
+  word-break: break-all;
+  font-size: 24rpx;
+  color: #333;
+  line-height: 1;
+  padding-right: 20rpx;
+}
+.skus-descript{
+  margin: 0 36rpx;
+  font-size: 26rpx;
+  color: #262626;
+  font-weight: 700;
+  height: 80rpx;
+  line-height: 80rpx;
+}
+.des-list{
+  height: 80rpx;
+  padding: 0 16rpx;
+}
+.item{
+  padding: 0 36rpx;
+  min-width: 40rpx;
+  max-width: 540rpx;
+  overflow: hidden;
+  height: 60rpx;
+  line-height: 60rpx;
+  float: left;
+  text-align: center;
+  margin-left: 24rpx;
+  margin-bottom: 20rpx;
+  font-size: 22rpx;
+  color: #262626;
+  background: #f2f2f2;
+  border-radius: 30rpx;
+}
+.active{
+  background: #fcedeb;
+  border: 2rpx solid #f2270c;
+  font-size: 22rpx;
+  color: #f2270c;
+  font-weight: 700;
+  height: 54rpx;
+}
+.buy-num{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 36rpx;
+  margin-top: 16rpx;
+}
+.by-num{
+  font-size: 26rpx;
+  color: #666;
+}
+.foot{
+  margin-top: 20rpx;
+  height: 80rpx;
+}
+.confirm-button{
+  margin: 0 36rpx;
+  height: 76rpx;
+  line-height: 76rpx;
+  border-radius: 42px;
+  box-shadow: 0 6rpx 12rpx 0 rgba(255,65,66,.2);
+  color: #fff;
+  font-size: 26rpx;
+  font-weight: 700;
+  text-align: center;
+  background-image: linear-gradient(135deg,#f2140c,#f2270c 70%,#f24d0c);
 }
