--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -26,3 +26,30 @@
   width: 750rpx;
   height: 300rpx;
 }
+.goods-list{
+  padding: 20rpx;
+  background: #f7f7f7;
+}
+.goods-item{
+  width: calc((100% - 40rpx)/2);
+  float: left;
+  margin-right: 10rpx;
+  margin-bottom: 10rpx;
+}
+.img{
+  width: 320rpx;
+  height: 320rpx;
+}
+.goods-text{
+  height: 100rpx;
+}
+.text{
+  font-size: 28rpx;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+  line-height: 1.3;
+}
+.price{
+  color: red;
+}
