--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -2,11 +2,11 @@
   <view class="header">
     <view class="person-info">
       <view class="headimage">
-        <image class="img" src="https://tvax2.sinaimg.cn/crop.0.0.996.996.180/006wxslJly8g8h2xm7dy4j30ro0rowgy.jpg?KID=imgbed,tva&Expires=1587139694&ssig=7GIsx%2B00WW"></image>
+        <image class="img" src="{{userInfo.avatarUrl}}"></image>
       </view>
       <view class="name-info">
-        <view class="name">唐宋爱吃鱼</view>
-        <view class="name-text">你好啊,XXX</view>
+        <view class="name">{{userInfo.nickName}}</view>
+        <view class="name-text">你好啊,{{userInfo.nickName}}</view>
       </view>
     </view>
   </view>
